# web3-

./: .env.example  .gitignore  Cargo.toml  README.md  ROADMAP.md  hardhat.config.cjs  package-lock.json  package.json  pom.xml  project_1_noai.sol  sendTx.ts  test.sol
artifacts/@openzeppelin/contracts/interfaces/IERC1363.sol/: IERC1363.dbg.json
artifacts/@openzeppelin/contracts/token/ERC20/IERC20.sol/: IERC20.dbg.json
artifacts/@openzeppelin/contracts/token/ERC20/utils/SafeERC20.sol/: SafeERC20.dbg.json
contracts/: project_1.sol
contracts/experimental/: testUsdt.sol
contracts/mocks/: MockUSDT.sol
docs/: BETA_TEST_CHECKLIST.md  FRONTEND_JS_FLOW.md
frontend/: README.txt  admin.html  admin.js  buyer-center.html  buyer-center.js  config.js  entry.css  entry.html  entry.js  index.html  motion.js  product.html  product.js  seller-center.html  seller-center.js  seller.html  seller.js  shared.js  store.js  styles.css
legacy/frontend/: app.js
legacy/node/: serve-frontend.mjs
legacy/rust/: Cargo.toml
src/: main.rs
src/main/java/com/efstore/backend/: ApiController.java  Application.java  AuthService.java  Models.java  README.txt  StoreService.java  StoreSupport.java
src/main/resources/: application.properties
test/: contractName_order.js
