[package]
name = "web3_basics"
version = "0.1.0"
edition = "2024"
default-run = "web3_basics"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
dotenv = "0.15"
ethers = "2.0"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
